--- a/TimeToSound/Pages/Index.razor
+++ b/TimeToSound/Pages/Index.razor
@@ -11,7 +11,7 @@
 <h1>Speaker</h1>
 
 @code {
-    private readonly TelegramBotClient _botClient = new(Environment.GetEnvironmentVariable("BOT_TOKEN"));
+    private readonly TelegramBotClient _botClient = new("6860038173:AAH5JARyElpAKLdol7ia0Yc7qpah6d7e99I");
 
     protected override async Task OnInitializedAsync()
     {
